updates to the spiff log api for pagination and some cleanup w/ burnettk cullerton
