# src/spiffworkflow_backend/api.yml
@@ -925,18 +925,42 @@ paths:
               schema:
                 $ref: "#/components/schemas/Workflow"
 
-  /process-instance/{process_instance_id}/logs:
+  /process-models/{process_group_id}/{process_model_id}/process-instances/{process_instance_id}/logs:
     parameters:
+      - name: process_group_id
+        in: path
+        required: true
+        description: The unique id of an existing process group
+        schema:
+          type: string
+      - name: process_model_id
+        in: path
+        required: true
+        description: The unique id of an existing process model.
+        schema:
+          type: string
       - name: process_instance_id
         in: path
         required: true
         description: the id of the process instance
         schema:
           type: integer
+      - name: page
+        in: query
+        required: false
+        description: The page number to return. Defaults to page 1.
+        schema:
+          type: integer
+      - name: per_page
+        in: query
+        required: false
+        description: The number of items to show per page. Defaults to page 10.
+        schema:
+          type: integer
     get:
       tags:
         - Process Instances
-      operationId: spiffworkflow_backend.routes.process_api_blueprint.get_process_instance_logs
+      operationId: spiffworkflow_backend.routes.process_api_blueprint.process_instance_log_list
       summary: returns a list of logs associated with the process instance
       responses:
         "200":
